# meeting-room-booking

./: .editorconfig  .pre-commit-config.yaml  Makefile  README.md  docker-compose.override.yml.dist  docker-compose.yml
.github/workflows/: api-go.yml  api.yml  api2.yml  front.yml
api/: .clippy.toml  .env.dist  Cargo.toml  Makefile  README.md  entrypoint.sh
api-go/: .gitignore  .pre-commit-config.yaml  go.mod  go.sum  main.go
api-go/database/: database.go
api-go/database/dbhandlers/: booking.go  room.go  user.go
api-go/database/dbmodels/: booking.go  room.go  user.go
api-go/handlers/: booking.go  room.go  user.go
api-go/models/: bodyRequest.go
api-go/router/: bookingRouter.go  roomRouter.go  router.go  userRouter.go
api/migrations/2020-03-18-194911_create_room/: down.sql  up.sql
api/migrations/2020-03-19-160456_create_users/: up.sql
api/migrations/2020-03-19-160502_create_booking/: down.sql  up.sql
api/src/: lib.rs  main.rs  models.rs  room.rs  schema.rs
api/src/db/: users.rs
api2/: .env.dist  go.mod  go.sum  main.go
api2/database/models/: booking.go  room.go
api2/handlers/: room.go  user.go
api2/router/: userRouter.go  userRouter_test.go
front/: .eslintrc.js  package-lock.json  package.json  rollup.config.js  svelte.config.js  tailwind.config.js
front/src/: App.svelte  main.js  store.js
front/src/calendar/: Calendar.svelte  Commands.svelte  Day.svelte
front/src/footer/: Footer.svelte
front/src/nav/: Nav.svelte
front/src/pages/: index.svelte
front/src/pages/home/: index.svelte
