[package]
name = "api"
version = "0.1.0"
authors = ["Jérôme Pogeant <p-jerome@hotmail.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.3"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
postgres = "0.15.2"
diesel = { version = "1.0.0", features = ["postgres"] }
dotenv = "0.9.0"

[dependencies.rocket_contrib]
version = "0.4.4"
default-features = false
features = ["json"]
